# Quantify

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  styles.css
.github/workflows/: ci.yml
data/: quantify.db.bak
deploy/: ubuntu.md
docs/: deploy.md
docs/plan/: 01-estado-actual.md  02-referencia-fisica-103.md  03-modelo-datos-y-motor.md  04-roadmap-fases.md  README.md
docs/tecnicas/: corriente-continua-hoja-resultados.md  filtros-hoja-resultados.md  fluidos-1-hoja-resultados.md  fluidos-1.md  fluidos-2-hoja-resultados.md  fluidos-2.md  viscosidad-hoja-resultados.md  viscosidad.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: dev-reset.ps1  dev-reset.sh
src/: analysis.rs  app.rs  computation.rs  courses.rs  db.rs  error.rs  instruments.rs  lib.rs  main.rs  practices.rs  routes.rs  sessions.rs  styles.css  submissions.rs  uncertainty.rs  users.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: app_shell.rs  cronometro_panel.rs  instrumentos_panel.rs  mod.rs  practica_pendulo.rs  practicas_tabs.rs  regression_panel.rs
static/: academic.js  analysis.js  api.js  app.css  app.js  auth.js  chronometer.js  constants.js  courses.js  dom.js  forms.js  gradebook.js  groups.js  index.html  instruments.js  invitations.js  lib.js  navigation.js  practices-admin.js  state.js  students.js  submissions.js  theme.js  users.js
tests/: chronometer.test.js  lib.test.js  stats.test.js
(+14 files in other folders)
